--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "walker",
   "version": "1.0.0",
   "engines": {
-    "node": "5.6.0"
+    "node": "5.6.0",
+    "npm": "3.6.0"
     },
   "description": "A step-tracking application",
   "main": "app.js",
