--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "engines": {
     "node": "5.6.0",
     "npm": "3.6.0"
-    },
+  },
   "description": "A step-tracking application",
   "main": "app.js",
   "scripts": {
+    "start": "node app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -24,5 +25,8 @@
   "bugs": {
     "url": "https://github.com/jake-bladt/walkerJs/issues"
   },
-  "homepage": "https://github.com/jake-bladt/walkerJs#readme"
+  "homepage": "https://github.com/jake-bladt/walkerJs#readme",
+  "dependencies": {
+    "express": "^4.13.4"
+  }
 }
