--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
   "bugs": {
     "url": "https://github.com/jake-bladt/walkerJs/issues"
   },
-  "homepage": "https://github.com/jake-bladt/walkerJs#readme",
+  "homepage": "http://walkerjs.herokuapp.com",
   "dependencies": {
     "express": "^4.13.4",
     "jade": "^1.11.0"
